syntax = "proto3";

option go_package = "gitlab.com/naftis/app/naftis/pkg/protocol/entity";

package io.naftis.entity;

message PriceList {
  // @inject_tag: validate:"required,min=1,max=1000000"
  uint32 CpuPerMinute = 1;

  // @inject_tag: validate:"required,min=1,max=1000000"
  uint32 MemoryPerMinute = 2;
}